[package]
name = "tree-sitter-hml"
description = "HML is a small markup language that looks a bit like HTML, but uses block syntax with curly braces."
version = "0.1.0"
authors = ["Eduardo Flores <edfloreshz@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "hml"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/hypermark-lang/tree-sitter-hml"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.6"
